log
Thu Mar 19 07:10:15 PM UTC 2026: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:14: error: expected expression before ‘List’
   56 |    while(top(List *L) != NULL){
      |              ^~~~
exercises.c:57:19: error: expected expression before ‘List’
   57 |       cont += top(List *L);
      |                   ^~~~
exercises.c:58:11: error: expected expression before ‘List’
   58 |       pop(List *L);
      |           ^~~~
4eddaa4
Thu Mar 19 07:15:26 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:16: error: expected expression before ‘List’
   56 |    while(first(List *L) != NULL){
      |                ^~~~
exercises.c:57:21: error: expected expression before ‘List’
   57 |       cont += first(List *L);
      |                     ^~~~
exercises.c:58:11: error: expected expression before ‘List’
   58 |       pop(List *L);
      |           ^~~~
50c99e1
Thu Mar 19 07:17:41 PM UTC 2026: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:56:10: error: expected expression before ‘void’
   56 |    while(void* first(List *L) != NULL){
      |          ^~~~
exercises.c:57:15: error: expected expression before ‘void’
   57 |       cont += void* first(List *L);
      |               ^~~~
dec935f
